<?xml version="1.0"?>
<package>
  <name>fast_downward_msgs</name>
  <version>0.5.0</version>
  <description>ROS messages for the fast-downward planner</description>
  <maintainer email="karoly.istvan.artur@gmail.com">Felix v. Drigalski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
