<?xml version="1.0"?>
<package>
  <name>rosparam_shortcuts</name>
  <version>0.3.3</version>
  <description>Quickly load variables from rosparam with good command line error checking.</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/rosparam_shortcuts</url>
  <url type="butracker">https://github.com/davetcoleman/rosparam_shortcuts/issues</url>
  <url type="repository">https://github.com/davetcoleman/rosparam_shortcuts/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <export>
  </export>
</package>
